# chat-room-python-react

./: CHANGED.md
api/: README.md  __init__.py  database.py  main.py  pyproject.toml  requirements.txt
api/models/: __init__.py  friendship.py  group.py  message.py  message_read.py  user.py
api/routers/: auth.py  friends.py  groups.py  messages.py  users.py
api/utils/: auth.py  image.py
api/websocket/: chat.py
frontend/: App.tsx  README.md  constants.ts  index.html  metadata.json  package.json  types.ts
frontend/components/: ChatWindow.tsx  GroupManagement.tsx  Login.tsx  ProfileModal.tsx  Register.tsx  Sidebar.tsx  TopNav.tsx
frontend/services/: api.ts  websocket.ts
